--- a/PT.html
+++ b/PT.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,129 +15,91 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
 
     <title>Tour India</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- Header  -->
     <header class="container-fluid" id="header">
-      <div class="row">
-        <div class="col-1 logo">
-          <!-- <a href="" class="logo-click"></a> -->
-          <img src="./assets/images/logo2.jpg" class="" alt="" />
-        </div>
-        <div class="col nav">
-          <a href="#">Home</a>
-          <a href="#">District</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
-          <a href="#">Home</a>
-        </div>
-        <div class="col-3 user">
-          <div class="search-box">
-            <div>
-              <img src="./assets/images/search.png" alt="" />
+        <div class="row">
+            <div class="col-1 logo">
+                <!-- <a href="" class="logo-click"></a> -->
+                <img src="./assets/images/logo2.jpg" class="" alt="" />
             </div>
-            <div><input class="search-key" type="text" /></div>
-          </div>
+            <div class="col nav">
+                <a href="./index.html">Home</a>
+                <a class="active" href="./district.html">District</a>
+                <a href="./login.html">Login</a>
+                <a href="./signup.html">Signup</a>
+            </div>
+            <div class="col-3 user">
+                <div class="search-box">
+                    <div>
+                        <img src="./assets/images/search.png" alt="" />
+                    </div>
+                    <div><input class="search-key" type="text" /></div>
+                </div>
+            </div>
         </div>
-      </div>
     </header>
 
     <!-- content -->
     <section class="container-fluid dist-intro">
-      <article class="row">
-        <div class="col dist-img">
-          <h1 class="glow">Pathanamthitta</h1>
-          <img src="./assets/images/Ditricts/PT.jpg" alt="" />
-        </div>
-      </article>
+        <article class="row">
+            <div class="col dist-img">
+                <h1 class="glow">Pathanamthitta</h1>
+                <img src="./assets/images/Ditricts/PT.jpg" alt="" />
+            </div>
+        </article>
     </section>
 
     <section class="container">
-      <article class="row mb-5">
-        <div class="col-6">
-          <div class="image-container">
-            <a href="https://pathanamthitta.nic.in/">
-              <img
-                src="./assets/images/Ditricts/map/PK.png"
-                class="w-100"
-                alt=""
-              />
-            </a>
-          </div>
-        </div>
-        <div class="col-6">
-          <div class="mt-5">
-            <h3>ABOUT DISTRICT&nbsp;</h3>
-            <p>
-              <strong>Pathanamthitta: Land of Richness</strong>
-            </p>
-            <p
-              class="text-justify"
-              id="tw-target-text"
-              dir="ltr"
-              data-placeholder="Translation"
-            >
-              Pathanamthitta District is a district in the southern part of
-              Kerala, India. The district headquarters is in the town of
-              Pathanamthitta. There are four municipalities in Pathanamthitta:
-              Tiruvalla, Adoor, Pathanamthitta and Pandalam. According to the
-              2001 Census of India, the population was 1,231,577, making it the
-              third least populous district in Kerala (out of 14), after Wayanad
-              and Idukki. Pathanamthitta has been declared the first polio-free
-              district in India. The district is 10.03% urbanised.
-              Pathanamthitta is one of the Richestt districts in India with just
-              1.17% poverty as of 2013, which places the district among top 5
-              districts in India with least poverty.
-            </p>
-          </div>
-        </div>
-      </article>
+        <article class="row mb-5">
+            <div class="col-6">
+                <div class="image-container">
+                    <a href="https://pathanamthitta.nic.in/">
+                        <img src="./assets/images/Ditricts/map/PK.png" class="w-100" alt="" />
+                    </a>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="mt-5">
+                    <h3>ABOUT DISTRICT&nbsp;</h3>
+                    <p>
+                        <strong>Pathanamthitta: Land of Richness</strong>
+                    </p>
+                    <p class="text-justify" id="tw-target-text" dir="ltr" data-placeholder="Translation">
+                        Pathanamthitta District is a district in the southern part of Kerala, India. The district headquarters is in the town of Pathanamthitta. There are four municipalities in Pathanamthitta: Tiruvalla, Adoor, Pathanamthitta and Pandalam. According to the 2001
+                        Census of India, the population was 1,231,577, making it the third least populous district in Kerala (out of 14), after Wayanad and Idukki. Pathanamthitta has been declared the first polio-free district in India. The district is
+                        10.03% urbanised. Pathanamthitta is one of the Richestt districts in India with just 1.17% poverty as of 2013, which places the district among top 5 districts in India with least poverty.
+                    </p>
+                </div>
+            </div>
+        </article>
 
-      <article class="row places">
-        <div class="col-12 mb-4 animated">
-          <p class="h2">Places Of interest</p>
+        <article class="row places">
+            <div class="col-12 mb-4 animated">
+                <p class="h2">Places Of interest</p>
 
-          <!-- first -->
-          <div class="row places-row mb-3">
-            <div class="col-3">
-              <div class="text-center">
-                <h2 class="">
-                  Perunthenaruvi Waterfall
-                </h2>
-                <figure>
-                  <img
-                    class="dist-place"
-                    src="./assets/images/Ditricts/PT/Perunthenaruvi Waterfall.jpg"
-                    alt=""
-                  />
-                </figure>
-              </div>
-              <div class="wpb_wrapper">
-                <p class="text-justify">
-                  A natural waterfall with captivating surroundings is situated
-                  on the banks of the River Pamba. The fall is 60 to 100 ft deep
-                  which pours down on a rocky bed. The place is a favourite
-                  picnic spot among locals as well as tourists.
-                </p>
-                <p class="place-location">
-                  Location:
-                  <img
-                    loading="lazy"
-                    class="alignnone  wp-image-25056"
-                    src="./assets/images/loc.png"
-                    alt="map"
-                    width="21"
-                    height="21"
-                    sizes="(max-width: 21px) 100vw, 21px"
-                  />
-                  <a
-                    href="https://www.google.com/maps/place/Perunthenaruvi+Falls/@9.4135005,76.8734763,17z/data=!3m1!4b1!4m5!3m4!1s0x3b0646e149d72d2f:0xe52e159e8b9c109e!8m2!3d9.4135005!4d76.875665"
-                    onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
-                    aria-label="Piramadam-Vettimood Road - External site that opens in a new window"
-                    title="Piramadam-Vettimood Road - External site that opens in a new window"
-                    target="_blank"
-                  >
+                <!-- first -->
+                <div class="row places-row mb-3">
+                    <div class="col-3">
+                        <div class="text-center">
+                            <h2 class="">
+                                Perunthenaruvi Waterfall
+                            </h2>
+                            <figure>
+                                <img class="dist-place" src="./assets/images/Ditricts/PT/Perunthenaruvi Waterfall.jpg" alt="" />
+                            </figure>
+                        </div>
+                        <div class="wpb_wrapper">
+                            <p class="text-justify">
+                                A natural waterfall with captivating surroundings is situated on the banks of the River Pamba. The fall is 60 to 100 ft deep which pours down on a rocky bed. The place is a favourite picnic spot among locals as well as tourists.
+                            </p>
+                            <p class="place-location">
+                                Location:
+                                <img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
+                                <a href="https://www.google.com/maps/place/Perunthenaruvi+Falls/@9.4135005,76.8734763,17z/data=!3m1!4b1!4m5!3m4!1s0x3b0646e149d72d2f:0xe52e159e8b9c109e!8m2!3d9.4135005!4d76.875665" onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
+                                    aria-label="Piramadam-Vettimood Road - External site that opens in a new window" title="Piramadam-Vettimood Road - External site that opens in a new window" target="_blank">
                     Perumthenaruvi Hilltop Rd, Vechoochira, Kerala 686511</a
                   >
                 </p>
@@ -180,48 +143,28 @@
                     target="_blank"
                     >Pathanamthitta
                   </a>
-                </p>
-              </div>
-            </div>
+                            </p>
+                        </div>
+                    </div>
 
-            <div class="col-3">
-              <div class="text-center">
-                <h2 class="">
-                  Sabarimala
-                </h2>
-                <figure>
-                  <img
-                    class="dist-place"
-                    src="./assets/images/Ditricts/PT/Sabarimala.jpg"
-                    alt=""
-                  />
-                </figure>
-              </div>
-              <div class="wpb_wrapper">
-                <p class="text-justify">
-                  One of the major religious hubs of South India, Sabarimala
-                  houses Sastha Temple situated about 80 km from Pathanamthitta
-                  town. Dedicated to Lord Ayyappa, this temple is situated in
-                  the lap of nature amid the dangerous hills of Western Ghats.
-                </p>
-                <p class="place-location">
-                  Location:
-                  <img
-                    loading="lazy"
-                    class="alignnone  wp-image-25056"
-                    src="./assets/images/loc.png"
-                    alt="map"
-                    width="21"
-                    height="21"
-                    sizes="(max-width: 21px) 100vw, 21px"
-                  />
-                  <a
-                    href="https://www.google.com/maps/place/Sabarimala,+Kerala/@9.4224323,77.0534704,14z/data=!3m1!4b1!4m5!3m4!1s0x3b065b984dd41c11:0x953037d850a3006e!8m2!3d9.4320761!4d77.0820015"
-                    onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
-                    aria-label="Kothamangalam - External site that opens in a new window"
-                    title="Kothamangalam - External site that opens in a new window"
-                    target="_blank"
-                    >Perinad Village, Pathanamthitta</a
+                    <div class="col-3">
+                        <div class="text-center">
+                            <h2 class="">
+                                Sabarimala
+                            </h2>
+                            <figure>
+                                <img class="dist-place" src="./assets/images/Ditricts/PT/Sabarimala.jpg" alt="" />
+                            </figure>
+                        </div>
+                        <div class="wpb_wrapper">
+                            <p class="text-justify">
+                                One of the major religious hubs of South India, Sabarimala houses Sastha Temple situated about 80 km from Pathanamthitta town. Dedicated to Lord Ayyappa, this temple is situated in the lap of nature amid the dangerous hills of Western Ghats.
+                            </p>
+                            <p class="place-location">
+                                Location:
+                                <img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
+                                <a href="https://www.google.com/maps/place/Sabarimala,+Kerala/@9.4224323,77.0534704,14z/data=!3m1!4b1!4m5!3m4!1s0x3b065b984dd41c11:0x953037d850a3006e!8m2!3d9.4320761!4d77.0820015" onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
+                                    aria-label="Kothamangalam - External site that opens in a new window" title="Kothamangalam - External site that opens in a new window" target="_blank">Perinad Village, Pathanamthitta</a
                   >
                 </p>
               </div>
@@ -467,48 +410,40 @@
             Thiruvananthapuram, Kerala, India - 695 033<br />Phone: +91 471
             2321132, Fax: +91 471 2322279, E-mail:
             <a href="mailto:info@keralatourism.org">info@keralatourism.org</a>.
-            <br />All rights reserved © Kerala Tourism 2022.
-            <a href="" title="Copyright">Copyright</a> |
-            <a href="" title="Terms of Use">Terms of Use</a> |
-            <a href="" title="Cookie Policy">Cookie Policy</a> |
-            <a href="" title="Contact Us">Contact Us</a>. <br />Developed &amp;
-            Maintained by Invis Multimedia.
-          </div>
-        </div>
-      </div>
-      <div></div>
-    </footer>
+                                <br />All rights reserved © Kerala Tourism 2022.
+                                <a href="" title="Copyright">Copyright</a> |
+                                <a href="" title="Terms of Use">Terms of Use</a> |
+                                <a href="" title="Cookie Policy">Cookie Policy</a> |
+                                <a href="" title="Contact Us">Contact Us</a>. <br />Developed &amp; Maintained by Invis Multimedia.
+                        </div>
+                    </div>
+                </div>
+                <div></div>
+                </footer>
 
-    <!-- Optional JavaScript -->
+                <!-- Optional JavaScript -->
 
-    <script>
-      // When the user scrolls down 50px from the top of the document, resize the header's font size
-      window.onscroll = function () {
-        scrollFunction()
-      }
+                <script>
+                    // When the user scrolls down 50px from the top of the document, resize the header's font size
+                    window.onscroll = function() {
+                        scrollFunction()
+                    }
 
-      function scrollFunction () {
-        if (
-          document.body.scrollTop > 50 ||
-          document.documentElement.scrollTop > 50
-        ) {
-          document.getElementById('header').classList.add('head-scroll')
-        } else {
-          document.getElementById('header').classList.remove('head-scroll')
-        }
-      }
-    </script>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-      crossorigin="anonymous"
-    ></script>
-    <!-- <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script> -->
-  </body>
+                    function scrollFunction() {
+                        if (
+                            document.body.scrollTop > 50 ||
+                            document.documentElement.scrollTop > 50
+                        ) {
+                            document.getElementById('header').classList.add('head-scroll')
+                        } else {
+                            document.getElementById('header').classList.remove('head-scroll')
+                        }
+                    }
+                </script>
+                <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+                <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+                <!-- <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script> -->
+</body>
+
 </html>
