--- a/WA.html
+++ b/WA.html
@@ -26,11 +26,10 @@
                 <img src="./assets/images/logo2.jpg" class="" alt="" />
             </div>
             <div class="col nav">
-                <a href="#">Home</a>
-                <a href="#">District</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
-                <a href="#">Home</a>
+                <a href="./index.html">Home</a>
+                <a class="active" href="./district.html">District</a>
+                <a href="./login.html">Login</a>
+                <a href="./signup.html">Signup</a>
             </div>
             <div class="col-3 user">
                 <div class="search-box">
@@ -95,7 +94,8 @@
                         <div class="wpb_wrapper">
                             <p class="text-justify">
                                 The towering Phantom Rock and its surroundings are popular among nature lovers and photographers. The rock formation, which resembles a skull, is a unique example of nature’s artistry. It is a great place to relax and reflect on the beauty of the surrounding
-                                landscape.</p>
+                                landscape.
+                            </p>
                             <p class="place-location">
                                 Location:
                                 <img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
