--- a/district.html
+++ b/district.html
@@ -2,23 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- css -->
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
 
     <!-- Bootstrap CSS -->
 
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
 
-
-
     <title>Tour India</title>
-
-
 </head>
 
 <body>
@@ -27,38 +23,189 @@
         <div class="row">
             <div class="col-1 logo">
                 <!-- <a href="" class="logo-click"></a> -->
-                <img src="./assets/images/logo2.jpg" class="" alt="">
+                <img src="./assets/images/logo2.jpg" class="" alt="" />
             </div>
             <div class="col nav">
                 <a href="./index.html">Home</a>
-                <a class="active" href="#">District</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
-                <a href="#">Home</a>
+                <a class="active" href="./district.html">District</a>
+                <a href="./login.html">Login</a>
+                <a href="./signup.html">Signup</a>
             </div>
             <div class="col-3 user">
                 <div class="search-box">
                     <div>
-                        <img src="./assets/images/search.png" alt="">
+                        <img src="./assets/images/search.png" alt="" />
                     </div>
-                    <div><input class="search-key" type="text"></div>
-
+                    <div><input class="search-key" type="text" /></div>
                 </div>
             </div>
         </div>
-
     </header>
 
+    <!-- content -->
+    <section class="container-fluid dist-intro mb-5">
+        <article class="row">
+            <div class="col dist-img">
+                <img src="./assets/images/Ditricts/WA.jpg" alt="" />
+            </div>
+        </article>
+    </section>
+
+    <section class="container">
+        <div>
+            <h2 class="text-center">Districts</h2>
+
+        </div>
+        <article class="row row-cols-4 mb-5">
+
+            <div class="col card mb-3 border-0">
+                <div class=" card-body">
+                    <a href="./alp.html">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/AL/sreee.jpg" alt="" style="height: 150px;">
+                    </a>
+                    <h2 class="card-title text-center">Alappuzha</h2>
+                </div>
+            </div>
+            <div class="col card mb-3 border-0">
+                <div class=" card-body">
+                    <a href="./erklm.html">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/ekl/bolgaty.jpg" alt="" style="height: 150px;">
+                    </a>
+                    <h2 class="card-title text-center">Ernakulam</h2>
+                </div>
+            </div>
+            <div class="col card mb-3 border-0">
+                <div class=" card-body">
+                    <a href="./idk.html">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/IDK/anchuruli.jpg" alt="" style="height: 150px;">
+                    </a>
+                    <h2 class="card-title text-center">Idukki</h2>
+
+                </div>
+            </div>
+            <div class="col card mb-3 border-0">
+                <div class=" card-body">
+                    <a href="./KNR.html">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/KNR/beach.jpg" alt="" style="height: 150px;">
+                    </a>
+                    <h2 class="card-title text-center">Kannur</h2>
+
+                </div>
+            </div>
+
+            <div class="col card mb-3 border-0">
+                <div class=" card-body">
+                    <a href="./KSR.html">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/KSR/Ranipuram.jpg" alt="" style="height: 150px;">
+                    </a>
+                    <h2 class="card-title text-center">Kasaragod</h2>
+
+                </div>
+            </div>
+            <div class="col card mb-3 border-0">
+                <div class=" card-body">
+                    <a href="./KLM.html">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/KLM/jatayu.jpg" alt="" style="height: 150px;">
+                    </a>
+                    <h2 class="card-title text-center">Kollam</h2>
+
+                </div>
+            </div>
+            <div class="col card mb-3 border-0">
+                <div class=" card-body">
+                    <a href="./KT.html">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/KT/VAGAMON.jpg" alt="" style="height: 150px;">
+                    </a>
+                    <h2 class="card-title text-center">Kottyam</h2>
+
+                </div>
+            </div>
+            <div class="col card mb-3 border-0">
+                <div class=" card-body">
+                    <a href="./KZK.html">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/KZK/Thusharagiri Waterfall.jpg" alt="" style="height: 150px;">
+                    </a>
+                    <h2 class="card-title text-center">Kozhikode</h2>
+
+                </div>
+            </div>
+            <div class="col card mb-3 border-0">
+                <div class=" card-body">
+                    <a href="./MA.html">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/MA/Kottakkunnu.jpg" alt="" style="height: 150px;">
+                    </a>
+                    <h2 class="card-title text-center">Malappuram</h2>
+
+                </div>
+            </div>
+            <div class="col card mb-3 border-0">
+                <div class=" card-body">
+                    <a href="./PLK.html">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/PLK/Silent Valley National Park.jpg" alt="" style="height: 150px;">
+                    </a>
+                    <h2 class="card-title text-center">Palakkad</h2>
+
+                </div>
+            </div>
+            <div class="col card mb-3 border-0">
+                <div class=" card-body">
+                    <a href="./PT.html">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/PT/Aranmula.jpg" alt="" style="height: 150px;">
+                    </a>
+                    <h2 class="card-title text-center">Pathanamthitta</h2>
+
+                </div>
+            </div>
+            <div class="col card mb-3 border-0">
+                <div class=" card-body">
+                    <a href="./TV.html">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/TV/Poovar Island.jpg" alt="" style="height: 150px;">
+                    </a>
+                    <h2 class="card-title text-center">Thiruvananthapuram</h2>
+
+                </div>
+            </div>
+            <div class="col card mb-3 border-0">
+                <div class=" card-body">
+                    <a href="./TS.html">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/TS/athirapally-falls-in.jpg" alt="" style="height: 150px;">
+                    </a>
+                    <h2 class="card-title text-center">Thrissur</h2>
+
+                </div>
+            </div>
+            <div class="col card mb-3 border-0">
+                <div class=" card-body">
+                    <a href="./WA.html">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/WA/Edakkal Caves.jpg" alt="" style="height: 150px;">
+                    </a>
+                    <h2 class="card-title text-center">Wayanad</h2>
+
+                </div>
+            </div>
+
+        </article>
+
+
+    </section>
 
     <!-- Footer -->
     <footer class="container-fluid">
         <div class="row">
             <div class="col-12">
                 <div id="credit " class="fnt-color-light">
-                    <h3 class="text-center"><small>Toll free No: </small> 1-800-425-4747 <small>(Within India only)</small></h3>
-                    Department of Tourism, Government of Kerala, Park View, Thiruvananthapuram, Kerala, India - 695 033<br>Phone: +91 471 2321132, Fax: +91 471 2322279, E-mail: <a href="mailto:info@keralatourism.org">info@keralatourism.org</a>. <br>All
-                    rights reserved © Kerala Tourism 2022. <a href="" title="Copyright">Copyright</a> | <a href="" title="Terms of Use">Terms of Use</a> | <a href="" title="Cookie Policy">Cookie Policy</a> | <a href="" title="Contact Us">Contact Us</a>.
-                    <br>Developed &amp; Maintained by Invis Multimedia.
+                    <h3 class="text-center">
+                        <small>Toll free No: </small> 1-800-425-4747
+                        <small>(Within India only)</small>
+                    </h3>
+                    Department of Tourism, Government of Kerala, Park View, Thiruvananthapuram, Kerala, India - 695 033
+                    <br />Phone: +91 471 2321132, Fax: +91 471 2322279, E-mail:
+                    <a href="mailto:info@keralatourism.org">info@keralatourism.org</a>.
+                    <br />All rights reserved © Kerala Tourism 2022.
+                    <a href="" title="Copyright">Copyright</a> |
+                    <a href="" title="Terms of Use">Terms of Use</a> |
+                    <a href="" title="Cookie Policy">Cookie Policy</a> |
+                    <a href="" title="Contact Us">Contact Us</a>. <br />Developed &amp; Maintained by Invis Multimedia.
                 </div>
             </div>
         </div>
@@ -71,13 +218,16 @@
         // When the user scrolls down 50px from the top of the document, resize the header's font size
         window.onscroll = function() {
             scrollFunction()
-        };
+        }
 
         function scrollFunction() {
-            if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
-                document.getElementById("header").classList.add("head-scroll");
+            if (
+                document.body.scrollTop > 50 ||
+                document.documentElement.scrollTop > 50
+            ) {
+                document.getElementById('header').classList.add('head-scroll')
             } else {
-                document.getElementById("header").classList.remove("head-scroll");
+                document.getElementById('header').classList.remove('head-scroll')
             }
         }
     </script>
@@ -85,8 +235,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <!-- <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script> -->
-
-
 </body>
 
 </html>
