--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
             <div class="col nav">
                 <a class="active" href="./index.html">Home</a>
                 <a href="./district.html">District</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
-                <a href="#">Home</a>
+                <a href="./login.html">Login</a>
+                <a href="./signup.html">Signup</a>
             </div>
             <div class="col-3 user">
                 <div class="search-box">
