--- a/KLM.html
+++ b/KLM.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,133 +15,93 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
 
     <title>Tour India</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- Header  -->
     <header class="container-fluid" id="header">
-      <div class="row">
-        <div class="col-1 logo">
-          <!-- <a href="" class="logo-click"></a> -->
-          <img src="./assets/images/logo2.jpg" class="" alt="" />
-        </div>
-        <div class="col nav">
-          <a href="#">Home</a>
-          <a href="#">District</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
-          <a href="#">Home</a>
-        </div>
-        <div class="col-3 user">
-          <div class="search-box">
-            <div>
-              <img src="./assets/images/search.png" alt="" />
+        <div class="row">
+            <div class="col-1 logo">
+                <!-- <a href="" class="logo-click"></a> -->
+                <img src="./assets/images/logo2.jpg" class="" alt="" />
             </div>
-            <div><input class="search-key" type="text" /></div>
-          </div>
+            <div class="col nav">
+                <a href="./index.html">Home</a>
+                <a class="active" href="./district.html">District</a>
+                <a href="./login.html">Login</a>
+                <a href="./signup.html">Signup</a>
+            </div>
+            <div class="col-3 user">
+                <div class="search-box">
+                    <div>
+                        <img src="./assets/images/search.png" alt="" />
+                    </div>
+                    <div><input class="search-key" type="text" /></div>
+                </div>
+            </div>
         </div>
-      </div>
     </header>
 
     <!-- content -->
     <section class="container-fluid dist-intro">
-      <article class="row">
-        <div class="col dist-img">
-          <h1 class="glow">KOLLAM</h1>
-          <img src="./assets/images/Ditricts/kollam.jpg" alt="" />
-        </div>
-      </article>
+        <article class="row">
+            <div class="col dist-img">
+                <h1 class="glow">KOLLAM</h1>
+                <img src="./assets/images/Ditricts/kollam.jpg" alt="" />
+            </div>
+        </article>
     </section>
 
     <section class="container">
-      <article class="row mb-5">
-        <div class="col-6">
-          <div class="image-container">
-            <a href="https://kollam.nic.in/">
-              <img
-                src="./assets/images/Ditricts/map/kollam-map.png"
-                class="w-100"
-                alt=""
-              />
-            </a>
-          </div>
-        </div>
-        <div class="col-6">
-          <div class="mt-5">
-            <h3>ABOUT DISTRICT&nbsp;</h3>
-            <p>
-              <strong>Kollam: The amazing boat race</strong>
-            </p>
-            <p
-              class="text-justify"
-              id="tw-target-text"
-              dir="ltr"
-              data-placeholder="Translation"
-            >
-              Kollam district (formerly Quilon) is one of 14 districts of the
-              state of Kerala, India. The district has a cross-section of
-              Kerala's natural attributes; it is endowed with a long coastline,
-              a major Laccadive Sea seaport and an inland lake (Ashtamudi Lake).
-              The district has many source of waterbodies. Kallada river is one
-              among it and the east side land of river is EastKallada and the
-              west side land is WestKallada. Kallada Boat race is one among the
-              famous festival events of district. Even though it is a
-              competition between two land sides of river many boat clubs from
-              various places even beyond the district use to participate in the
-              event. Kollam is the capital of Kerala's cashew industry. Plains,
-              mountains, lakes, lagoons and backwaters, forests, farmland and
-              rivers make up the topography of the district. The area had
-              trading relationships with Phoenicia and Ancient Rome.
-            </p>
-          </div>
-        </div>
-      </article>
+        <article class="row mb-5">
+            <div class="col-6">
+                <div class="image-container">
+                    <a href="https://kollam.nic.in/">
+                        <img src="./assets/images/Ditricts/map/kollam-map.png" class="w-100" alt="" />
+                    </a>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="mt-5">
+                    <h3>ABOUT DISTRICT&nbsp;</h3>
+                    <p>
+                        <strong>Kollam: The amazing boat race</strong>
+                    </p>
+                    <p class="text-justify" id="tw-target-text" dir="ltr" data-placeholder="Translation">
+                        Kollam district (formerly Quilon) is one of 14 districts of the state of Kerala, India. The district has a cross-section of Kerala's natural attributes; it is endowed with a long coastline, a major Laccadive Sea seaport and an inland lake (Ashtamudi Lake).
+                        The district has many source of waterbodies. Kallada river is one among it and the east side land of river is EastKallada and the west side land is WestKallada. Kallada Boat race is one among the famous festival events of district.
+                        Even though it is a competition between two land sides of river many boat clubs from various places even beyond the district use to participate in the event. Kollam is the capital of Kerala's cashew industry. Plains, mountains,
+                        lakes, lagoons and backwaters, forests, farmland and rivers make up the topography of the district. The area had trading relationships with Phoenicia and Ancient Rome.
+                    </p>
+                </div>
+            </div>
+        </article>
 
-      <article class="row places">
-        <div class="col-12 mb-4 animated">
-          <p class="h2">Places Of interest</p>
+        <article class="row places">
+            <div class="col-12 mb-4 animated">
+                <p class="h2">Places Of interest</p>
 
-          <!-- first -->
-          <div class="row places-row mb-3">
-            <div class="col-3">
-              <div class="text-center">
-                <h2 class="">
-                  Amritapuri
-                </h2>
-                <figure>
-                  <img
-                    class="dist-place"
-                    src="./assets/images/Ditricts/ekl/areekkal.jpg"
-                    alt=""
-                  />
-                </figure>
-              </div>
-              <div class="wpb_wrapper">
-                <p class="text-justify">
-                  Amritapuri is the headquarters of Amma's worldwide mission and
-                  the spiritual home for Amma's monastic disciples and hundreds
-                  of householder devotees. This place, which is aldo her
-                  birthplace, now sees her followers from across India and
-                  abroad, coming here to have Amma's darshan (sighting).
-                </p>
-                <p class="place-location">
-                  Location:
-                  <img
-                    loading="lazy"
-                    class="alignnone  wp-image-25056"
-                    src="./assets/images/loc.png"
-                    alt="map"
-                    width="21"
-                    height="21"
-                    sizes="(max-width: 21px) 100vw, 21px"
-                  />
-                  <a
-                    href="https://www.google.com/maps/place/Amritapuri,+Vallikavu,+Kerala+690546/data=!4m2!3m1!1s0x3b0602e90737c955:0x2a8cdd448f63636b?sa=X&ved=2ahUKEwiFmf-8g6L1AhUyT2wGHf2JC3MQ8gF6BAgtEAE"
-                    onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
-                    aria-label="Piramadam-Vettimood Road - External site that opens in a new window"
-                    title="Piramadam-Vettimood Road - External site that opens in a new window"
-                    target="_blank"
-                    >kollam, Kerala</a
+                <!-- first -->
+                <div class="row places-row mb-3">
+                    <div class="col-3">
+                        <div class="text-center">
+                            <h2 class="">
+                                Amritapuri
+                            </h2>
+                            <figure>
+                                <img class="dist-place" src="./assets/images/Ditricts/ekl/areekkal.jpg" alt="" />
+                            </figure>
+                        </div>
+                        <div class="wpb_wrapper">
+                            <p class="text-justify">
+                                Amritapuri is the headquarters of Amma's worldwide mission and the spiritual home for Amma's monastic disciples and hundreds of householder devotees. This place, which is aldo her birthplace, now sees her followers from across India and abroad, coming
+                                here to have Amma's darshan (sighting).
+                            </p>
+                            <p class="place-location">
+                                Location:
+                                <img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
+                                <a href="https://www.google.com/maps/place/Amritapuri,+Vallikavu,+Kerala+690546/data=!4m2!3m1!1s0x3b0602e90737c955:0x2a8cdd448f63636b?sa=X&ved=2ahUKEwiFmf-8g6L1AhUyT2wGHf2JC3MQ8gF6BAgtEAE" onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
+                                    aria-label="Piramadam-Vettimood Road - External site that opens in a new window" title="Piramadam-Vettimood Road - External site that opens in a new window" target="_blank">kollam, Kerala</a
                   >
                 </p>
               </div>
@@ -185,49 +146,29 @@
                     target="_blank"
                     >Jatayu Junction
                   </a>
-                </p>
-              </div>
-            </div>
+                            </p>
+                        </div>
+                    </div>
 
-            <div class="col-3">
-              <div class="text-center">
-                <h2 class="">
-                  Punalur
-                </h2>
-                <figure>
-                  <img
-                    class="dist-place"
-                    src="./assets/images/Ditricts/KLM/Punalur.jpg"
-                    alt=""
-                  />
-                </figure>
-              </div>
-              <div class="wpb_wrapper">
-                <p class="text-justify">
-                  The town's name translates into 'town of water', the river
-                  Kallada flows through the city of Punalur. This town is also
-                  known as the 'lap of the Western Ghats' because of its serene
-                  natural beauty. Punalur is pretty famous for its pineapples,
-                  plywood, pepper and timber.
-                </p>
-                <p class="place-location">
-                  Location:
-                  <img
-                    loading="lazy"
-                    class="alignnone  wp-image-25056"
-                    src="./assets/images/loc.png"
-                    alt="map"
-                    width="21"
-                    height="21"
-                    sizes="(max-width: 21px) 100vw, 21px"
-                  />
-                  <a
-                    href="https://www.google.com/maps/place/Punalur,+Kerala/@9.0158508,76.8922581,13z/data=!3m1!4b1!4m5!3m4!1s0x3b06769690499369:0xd54a44442e855bed!8m2!3d9.0176117!4d76.9260936"
-                    onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
-                    aria-label="Kothamangalam - External site that opens in a new window"
-                    title="Kothamangalam - External site that opens in a new window"
-                    target="_blank"
-                    >Punalur, Ananthapura</a
+                    <div class="col-3">
+                        <div class="text-center">
+                            <h2 class="">
+                                Punalur
+                            </h2>
+                            <figure>
+                                <img class="dist-place" src="./assets/images/Ditricts/KLM/Punalur.jpg" alt="" />
+                            </figure>
+                        </div>
+                        <div class="wpb_wrapper">
+                            <p class="text-justify">
+                                The town's name translates into 'town of water', the river Kallada flows through the city of Punalur. This town is also known as the 'lap of the Western Ghats' because of its serene natural beauty. Punalur is pretty famous for its pineapples, plywood,
+                                pepper and timber.
+                            </p>
+                            <p class="place-location">
+                                Location:
+                                <img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
+                                <a href="https://www.google.com/maps/place/Punalur,+Kerala/@9.0158508,76.8922581,13z/data=!3m1!4b1!4m5!3m4!1s0x3b06769690499369:0xd54a44442e855bed!8m2!3d9.0176117!4d76.9260936" onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
+                                    aria-label="Kothamangalam - External site that opens in a new window" title="Kothamangalam - External site that opens in a new window" target="_blank">Punalur, Ananthapura</a
                   >
                 </p>
               </div>
@@ -471,48 +412,40 @@
             Thiruvananthapuram, Kerala, India - 695 033<br />Phone: +91 471
             2321132, Fax: +91 471 2322279, E-mail:
             <a href="mailto:info@keralatourism.org">info@keralatourism.org</a>.
-            <br />All rights reserved © Kerala Tourism 2022.
-            <a href="" title="Copyright">Copyright</a> |
-            <a href="" title="Terms of Use">Terms of Use</a> |
-            <a href="" title="Cookie Policy">Cookie Policy</a> |
-            <a href="" title="Contact Us">Contact Us</a>. <br />Developed &amp;
-            Maintained by Invis Multimedia.
-          </div>
-        </div>
-      </div>
-      <div></div>
-    </footer>
+                                <br />All rights reserved © Kerala Tourism 2022.
+                                <a href="" title="Copyright">Copyright</a> |
+                                <a href="" title="Terms of Use">Terms of Use</a> |
+                                <a href="" title="Cookie Policy">Cookie Policy</a> |
+                                <a href="" title="Contact Us">Contact Us</a>. <br />Developed &amp; Maintained by Invis Multimedia.
+                        </div>
+                    </div>
+                </div>
+                <div></div>
+                </footer>
 
-    <!-- Optional JavaScript -->
+                <!-- Optional JavaScript -->
 
-    <script>
-      // When the user scrolls down 50px from the top of the document, resize the header's font size
-      window.onscroll = function () {
-        scrollFunction()
-      }
+                <script>
+                    // When the user scrolls down 50px from the top of the document, resize the header's font size
+                    window.onscroll = function() {
+                        scrollFunction()
+                    }
 
-      function scrollFunction () {
-        if (
-          document.body.scrollTop > 50 ||
-          document.documentElement.scrollTop > 50
-        ) {
-          document.getElementById('header').classList.add('head-scroll')
-        } else {
-          document.getElementById('header').classList.remove('head-scroll')
-        }
-      }
-    </script>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-      crossorigin="anonymous"
-    ></script>
-    <!-- <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script> -->
-  </body>
+                    function scrollFunction() {
+                        if (
+                            document.body.scrollTop > 50 ||
+                            document.documentElement.scrollTop > 50
+                        ) {
+                            document.getElementById('header').classList.add('head-scroll')
+                        } else {
+                            document.getElementById('header').classList.remove('head-scroll')
+                        }
+                    }
+                </script>
+                <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+                <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+                <!-- <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script> -->
+</body>
+
 </html>
