--- a/KNR.html
+++ b/KNR.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,128 +15,92 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
 
     <title>Tour India</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- Header  -->
     <header class="container-fluid" id="header">
-      <div class="row">
-        <div class="col-1 logo">
-          <!-- <a href="" class="logo-click"></a> -->
-          <img src="./assets/images/logo2.jpg" class="" alt="" />
-        </div>
-        <div class="col nav">
-          <a href="#">Home</a>
-          <a href="#">District</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
-          <a href="#">Home</a>
-        </div>
-        <div class="col-3 user">
-          <div class="search-box">
-            <div>
-              <img src="./assets/images/search.png" alt="" />
+        <div class="row">
+            <div class="col-1 logo">
+                <!-- <a href="" class="logo-click"></a> -->
+                <img src="./assets/images/logo2.jpg" class="" alt="" />
             </div>
-            <div><input class="search-key" type="text" /></div>
-          </div>
+            <div class="col nav">
+                <a href="./index.html">Home</a>
+                <a class="active" href="./district.html">District</a>
+                <a href="./login.html">Login</a>
+                <a href="./signup.html">Signup</a>
+            </div>
+            <div class="col-3 user">
+                <div class="search-box">
+                    <div>
+                        <img src="./assets/images/search.png" alt="" />
+                    </div>
+                    <div><input class="search-key" type="text" /></div>
+                </div>
+            </div>
         </div>
-      </div>
     </header>
 
     <!-- content -->
     <section class="container-fluid dist-intro">
-      <article class="row">
-        <div class="col dist-img">
-          <h1 class="glow">KANNUR</h1>
-          <img src="./assets/images/Ditricts/kannur.jpg" alt="" />
-        </div>
-      </article>
+        <article class="row">
+            <div class="col dist-img">
+                <h1 class="glow">KANNUR</h1>
+                <img src="./assets/images/Ditricts/kannur.jpg" alt="" />
+            </div>
+        </article>
     </section>
 
     <section class="container">
-      <article class="row mb-5">
-        <div class="col-6">
-          <div class="image-container">
-            <a href="https://kannur.nic.in/">
-              <img
-                src="./assets/images/Ditricts/map/kannur-map.png"
-                class="w-100"
-                alt=""
-              />
-            </a>
-          </div>
-        </div>
-        <div class="col-6">
-          <div class="mt-5">
-            <h3>ABOUT DISTRICT&nbsp;</h3>
-            <p>
-              <strong>Kannur: The Largest district in kerala</strong>
-            </p>
-            <p
-              class="text-justify"
-              id="tw-target-text"
-              dir="ltr"
-              data-placeholder="Translation"
-            >
-              Kannur District is one of the 14 districts along the west coast in
-              the state of Kerala, India. The town of Kannur is the district
-              headquarters and gives the district its name. The old name,
-              Cannanore is the anglicised form of the Malayalam name "Kannur".
-              Kannur district is bounded by Kasaragod District to the north,
-              Kozhikode district to the south and Wayanad District to the
-              southeast. To the east the district is bounded by the Western
-              Ghats, which forms the border with the state of Karnataka (Kodagu
-              district). The Arabian Sea is to the west. The district was
-              established in 1957.
-            </p>
-          </div>
-        </div>
-      </article>
+        <article class="row mb-5">
+            <div class="col-6">
+                <div class="image-container">
+                    <a href="https://kannur.nic.in/">
+                        <img src="./assets/images/Ditricts/map/kannur-map.png" class="w-100" alt="" />
+                    </a>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="mt-5">
+                    <h3>ABOUT DISTRICT&nbsp;</h3>
+                    <p>
+                        <strong>Kannur: The Largest district in kerala</strong>
+                    </p>
+                    <p class="text-justify" id="tw-target-text" dir="ltr" data-placeholder="Translation">
+                        Kannur District is one of the 14 districts along the west coast in the state of Kerala, India. The town of Kannur is the district headquarters and gives the district its name. The old name, Cannanore is the anglicised form of the Malayalam name "Kannur".
+                        Kannur district is bounded by Kasaragod District to the north, Kozhikode district to the south and Wayanad District to the southeast. To the east the district is bounded by the Western Ghats, which forms the border with the state
+                        of Karnataka (Kodagu district). The Arabian Sea is to the west. The district was established in 1957.
+                    </p>
+                </div>
+            </div>
+        </article>
 
-      <article class="row places">
-        <div class="col-12 mb-4 animated">
-          <p class="h2">Places Of interest</p>
+        <article class="row places">
+            <div class="col-12 mb-4 animated">
+                <p class="h2">Places Of interest</p>
 
-          <!-- first -->
-          <div class="row places-row mb-3">
-            <div class="col-3">
-              <div class="text-center">
-                <h2 class="">
-                  Paithalmala
-                </h2>
-                <figure>
-                  <img
-                    class="dist-place"
-                    src="./assets/images/Ditricts/KNR/paithal-mala.jpg"
-                    alt=""
-                  />
-                </figure>
-              </div>
-              <div class="wpb_wrapper">
-                <p class="text-justify">
-                  Paithalmala (Vaithalmala) is a hill station located in the
-                  Kannur district of Kerala. This section joins the Western
-                  Ghats, passing through the trekking forest and extending to
-                  the summit.
-                </p>
-                <p class="place-location">
-                  Location:
-                  <img
-                    loading="lazy"
-                    class="alignnone  wp-image-25056"
-                    src="./assets/images/loc.png"
-                    alt="map"
-                    width="21"
-                    height="21"
-                    sizes="(max-width: 21px) 100vw, 21px"
-                  />
-                  <a
-                    href="https://www.google.com/maps/place/Paithal+Mala/@12.1704188,75.5414876,15z/data=!4m9!1m2!2m1!1sPaithalmala!3m5!1s0x3ba44f6e87e7bc91:0xaa0b91301783a38e!8m2!3d12.1701957!4d75.5563611!15sCgtQYWl0aGFsbWFsYVoNIgtwYWl0aGFsbWFsYZIBDGhpbGxfc3RhdGlvbg"
-                    onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
-                    aria-label="Piramadam-Vettimood Road - External site that opens in a new window"
-                    title="Piramadam-Vettimood Road - External site that opens in a new window"
-                    target="_blank"
-                    >Kudiyanmala, Kerala</a
+                <!-- first -->
+                <div class="row places-row mb-3">
+                    <div class="col-3">
+                        <div class="text-center">
+                            <h2 class="">
+                                Paithalmala
+                            </h2>
+                            <figure>
+                                <img class="dist-place" src="./assets/images/Ditricts/KNR/paithal-mala.jpg" alt="" />
+                            </figure>
+                        </div>
+                        <div class="wpb_wrapper">
+                            <p class="text-justify">
+                                Paithalmala (Vaithalmala) is a hill station located in the Kannur district of Kerala. This section joins the Western Ghats, passing through the trekking forest and extending to the summit.
+                            </p>
+                            <p class="place-location">
+                                Location:
+                                <img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
+                                <a href="https://www.google.com/maps/place/Paithal+Mala/@12.1704188,75.5414876,15z/data=!4m9!1m2!2m1!1sPaithalmala!3m5!1s0x3ba44f6e87e7bc91:0xaa0b91301783a38e!8m2!3d12.1701957!4d75.5563611!15sCgtQYWl0aGFsbWFsYVoNIgtwYWl0aGFsbWFsYZIBDGhpbGxfc3RhdGlvbg"
+                                    onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');" aria-label="Piramadam-Vettimood Road - External site that opens in a new window"
+                                    title="Piramadam-Vettimood Road - External site that opens in a new window" target="_blank">Kudiyanmala, Kerala</a
                   >
                 </p>
               </div>
@@ -179,47 +144,28 @@
                     target="_blank"
                     >Muzhappilangad Beach Rd, Muzhappilangad
                   </a>
-                </p>
-              </div>
-            </div>
+                            </p>
+                        </div>
+                    </div>
 
-            <div class="col-3">
-              <div class="text-center">
-                <h2 class="">
-                  Payyambalam Beach
-                </h2>
-                <figure>
-                  <img
-                    class="dist-place"
-                    src="./assets/images/Ditricts/KNR/payamblm.jpg"
-                    alt=""
-                  />
-                </figure>
-              </div>
-              <div class="wpb_wrapper">
-                <p class="text-justify">
-                  Payyambalam Beach in Kannur is a well maintained place. This
-                  place is the perfect place to enjoy a family picnic or relax.
-                  For those who want a little adventure.
-                </p>
-                <p class="place-location">
-                  Location:
-                  <img
-                    loading="lazy"
-                    class="alignnone  wp-image-25056"
-                    src="./assets/images/loc.png"
-                    alt="map"
-                    width="21"
-                    height="21"
-                    sizes="(max-width: 21px) 100vw, 21px"
-                  />
-                  <a
-                    href="https://www.google.com/maps/place/Payyambalam+Beach/@11.8728125,75.3454852,16z/data=!3m1!4b1!4m5!3m4!1s0x3ba43d53d2ea291b:0x3aecf6a6bee3f808!8m2!3d11.8715435!4d75.35087399"
-                    onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
-                    aria-label="Kothamangalam - External site that opens in a new window"
-                    title="Kothamangalam - External site that opens in a new window"
-                    target="_blank"
-                    >Kannur</a
+                    <div class="col-3">
+                        <div class="text-center">
+                            <h2 class="">
+                                Payyambalam Beach
+                            </h2>
+                            <figure>
+                                <img class="dist-place" src="./assets/images/Ditricts/KNR/payamblm.jpg" alt="" />
+                            </figure>
+                        </div>
+                        <div class="wpb_wrapper">
+                            <p class="text-justify">
+                                Payyambalam Beach in Kannur is a well maintained place. This place is the perfect place to enjoy a family picnic or relax. For those who want a little adventure.
+                            </p>
+                            <p class="place-location">
+                                Location:
+                                <img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
+                                <a href="https://www.google.com/maps/place/Payyambalam+Beach/@11.8728125,75.3454852,16z/data=!3m1!4b1!4m5!3m4!1s0x3ba43d53d2ea291b:0x3aecf6a6bee3f808!8m2!3d11.8715435!4d75.35087399" onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
+                                    aria-label="Kothamangalam - External site that opens in a new window" title="Kothamangalam - External site that opens in a new window" target="_blank">Kannur</a
                   >
                 </p>
               </div>
@@ -468,48 +414,40 @@
             Thiruvananthapuram, Kerala, India - 695 033<br />Phone: +91 471
             2321132, Fax: +91 471 2322279, E-mail:
             <a href="mailto:info@keralatourism.org">info@keralatourism.org</a>.
-            <br />All rights reserved © Kerala Tourism 2022.
-            <a href="" title="Copyright">Copyright</a> |
-            <a href="" title="Terms of Use">Terms of Use</a> |
-            <a href="" title="Cookie Policy">Cookie Policy</a> |
-            <a href="" title="Contact Us">Contact Us</a>. <br />Developed &amp;
-            Maintained by Invis Multimedia.
-          </div>
-        </div>
-      </div>
-      <div></div>
-    </footer>
+                                <br />All rights reserved © Kerala Tourism 2022.
+                                <a href="" title="Copyright">Copyright</a> |
+                                <a href="" title="Terms of Use">Terms of Use</a> |
+                                <a href="" title="Cookie Policy">Cookie Policy</a> |
+                                <a href="" title="Contact Us">Contact Us</a>. <br />Developed &amp; Maintained by Invis Multimedia.
+                        </div>
+                    </div>
+                </div>
+                <div></div>
+                </footer>
 
-    <!-- Optional JavaScript -->
+                <!-- Optional JavaScript -->
 
-    <script>
-      // When the user scrolls down 50px from the top of the document, resize the header's font size
-      window.onscroll = function () {
-        scrollFunction()
-      }
+                <script>
+                    // When the user scrolls down 50px from the top of the document, resize the header's font size
+                    window.onscroll = function() {
+                        scrollFunction()
+                    }
 
-      function scrollFunction () {
-        if (
-          document.body.scrollTop > 50 ||
-          document.documentElement.scrollTop > 50
-        ) {
-          document.getElementById('header').classList.add('head-scroll')
-        } else {
-          document.getElementById('header').classList.remove('head-scroll')
-        }
-      }
-    </script>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-      crossorigin="anonymous"
-    ></script>
-    <!-- <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script> -->
-  </body>
+                    function scrollFunction() {
+                        if (
+                            document.body.scrollTop > 50 ||
+                            document.documentElement.scrollTop > 50
+                        ) {
+                            document.getElementById('header').classList.add('head-scroll')
+                        } else {
+                            document.getElementById('header').classList.remove('head-scroll')
+                        }
+                    }
+                </script>
+                <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+                <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+                <!-- <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script> -->
+</body>
+
 </html>
