--- a/KSR.html
+++ b/KSR.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,131 +15,92 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
 
     <title>Tour India</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- Header  -->
     <header class="container-fluid" id="header">
-      <div class="row">
-        <div class="col-1 logo">
-          <!-- <a href="" class="logo-click"></a> -->
-          <img src="./assets/images/logo2.jpg" class="" alt="" />
-        </div>
-        <div class="col nav">
-          <a href="#">Home</a>
-          <a href="#">District</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
-          <a href="#">Home</a>
-        </div>
-        <div class="col-3 user">
-          <div class="search-box">
-            <div>
-              <img src="./assets/images/search.png" alt="" />
+        <div class="row">
+            <div class="col-1 logo">
+                <!-- <a href="" class="logo-click"></a> -->
+                <img src="./assets/images/logo2.jpg" class="" alt="" />
             </div>
-            <div><input class="search-key" type="text" /></div>
-          </div>
+            <div class="col nav">
+                <a href="./index.html">Home</a>
+                <a class="active" href="./district.html">District</a>
+                <a href="./login.html">Login</a>
+                <a href="./signup.html">Signup</a>
+            </div>
+            <div class="col-3 user">
+                <div class="search-box">
+                    <div>
+                        <img src="./assets/images/search.png" alt="" />
+                    </div>
+                    <div><input class="search-key" type="text" /></div>
+                </div>
+            </div>
         </div>
-      </div>
     </header>
 
     <!-- content -->
     <section class="container-fluid dist-intro">
-      <article class="row">
-        <div class="col dist-img">
-          <h1 class="glow">KASARGOD</h1>
-          <img src="./assets/images/Ditricts/ksr.png" alt="" />
-        </div>
-      </article>
+        <article class="row">
+            <div class="col dist-img">
+                <h1 class="glow">KASARGOD</h1>
+                <img src="./assets/images/Ditricts/ksr.png" alt="" />
+            </div>
+        </article>
     </section>
 
     <section class="container">
-      <article class="row mb-5">
-        <div class="col-6">
-          <div class="image-container">
-            <a href="https://ernakulam.nic.in/">
-              <img
-                src="./assets/images/Ditricts/map/ksr.png"
-                class="w-100"
-                alt=""
-              />
-            </a>
-          </div>
-        </div>
-        <div class="col-6">
-          <div class="mt-5">
-            <h3>ABOUT DISTRICT&nbsp;</h3>
-            <p>
-              <strong>Kasargod: An amazing paradigm of culture</strong>
-            </p>
-            <p
-              class="text-justify"
-              id="tw-target-text"
-              dir="ltr"
-              data-placeholder="Translation"
-            >
-              Kasaragod (About this soundlisten)), formerly Kassergode in
-              English,[4][5] is a municipal town and administrative headquarters
-              of Kasaragod district in the state of Kerala, India. Established
-              in the year 1966, Kasaragod was the first municipal town in the
-              district. It is the northernmost district of Kerala and is also
-              known as Saptha Bhasha Sangama Bhoomi.[2][definition needed]
-              Situated in the rich biodiversity of Western Ghats, it is known
-              for the Chandragiri and Bekal Forts,[6] Chandragiri River,
-              historic Kolathiri Rajas, natural environment of Ranipuram and
-              Kottancheri Hills, historical and religious sites like the Madiyan
-              Kulom temple, Madhur Temple, Ananthapuram Lake Temple and Malik
-              Deenar Mosque. The historic hill of Ezhimala is located on the
-              southern portion of Kavvayi Backwaters of Nileshwaram.
-            </p>
-          </div>
-        </div>
-      </article>
+        <article class="row mb-5">
+            <div class="col-6">
+                <div class="image-container">
+                    <a href="https://ernakulam.nic.in/">
+                        <img src="./assets/images/Ditricts/map/ksr.png" class="w-100" alt="" />
+                    </a>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="mt-5">
+                    <h3>ABOUT DISTRICT&nbsp;</h3>
+                    <p>
+                        <strong>Kasargod: An amazing paradigm of culture</strong>
+                    </p>
+                    <p class="text-justify" id="tw-target-text" dir="ltr" data-placeholder="Translation">
+                        Kasaragod (About this soundlisten)), formerly Kassergode in English,[4][5] is a municipal town and administrative headquarters of Kasaragod district in the state of Kerala, India. Established in the year 1966, Kasaragod was the first municipal town in
+                        the district. It is the northernmost district of Kerala and is also known as Saptha Bhasha Sangama Bhoomi.[2][definition needed] Situated in the rich biodiversity of Western Ghats, it is known for the Chandragiri and Bekal Forts,[6]
+                        Chandragiri River, historic Kolathiri Rajas, natural environment of Ranipuram and Kottancheri Hills, historical and religious sites like the Madiyan Kulom temple, Madhur Temple, Ananthapuram Lake Temple and Malik Deenar Mosque.
+                        The historic hill of Ezhimala is located on the southern portion of Kavvayi Backwaters of Nileshwaram.
+                    </p>
+                </div>
+            </div>
+        </article>
 
-      <article class="row places">
-        <div class="col-12 mb-4 animated">
-          <p class="h2">Places Of interest</p>
+        <article class="row places">
+            <div class="col-12 mb-4 animated">
+                <p class="h2">Places Of interest</p>
 
-          <!-- first -->
-          <div class="row places-row mb-3">
-            <div class="col-3">
-              <div class="text-center">
-                <h2 class="">
-                  Ranipuram
-                </h2>
-                <figure>
-                  <img
-                    class="dist-place"
-                    src="./assets/images/Ditricts/ekl/areekkal.jpg"
-                    alt=""
-                  />
-                </figure>
-              </div>
-              <div class="wpb_wrapper">
-                <p class="text-justify">
-                  The gentle hills of Ranipuram in Kerala are famous for its
-                  trekking trail. Situated at the height of about 750 meters
-                  above sea level, this destination has thick forest vegetation
-                  and lush green grasslands.
-                </p>
-                <p class="place-location">
-                  Location:
-                  <img
-                    loading="lazy"
-                    class="alignnone  wp-image-25056"
-                    src="./assets/images/loc.png"
-                    alt="map"
-                    width="21"
-                    height="21"
-                    sizes="(max-width: 21px) 100vw, 21px"
-                  />
-                  <a
-                    href="https://www.google.com/maps/place/Ranipuram/@12.4192797,75.3334477,14z/data=!3m1!4b1!4m5!3m4!1s0x3ba37d0b4edae5fb:0xa2578fd53d53e34b!8m2!3d12.4192805!4d75.3509573!5m1!1e4"
-                    onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
-                    aria-label="Piramadam-Vettimood Road - External site that opens in a new window"
-                    title="Piramadam-Vettimood Road - External site that opens in a new window"
-                    target="_blank"
-                    >Ranipuram, Kerala</a
+                <!-- first -->
+                <div class="row places-row mb-3">
+                    <div class="col-3">
+                        <div class="text-center">
+                            <h2 class="">
+                                Ranipuram
+                            </h2>
+                            <figure>
+                                <img class="dist-place" src="./assets/images/Ditricts/ekl/areekkal.jpg" alt="" />
+                            </figure>
+                        </div>
+                        <div class="wpb_wrapper">
+                            <p class="text-justify">
+                                The gentle hills of Ranipuram in Kerala are famous for its trekking trail. Situated at the height of about 750 meters above sea level, this destination has thick forest vegetation and lush green grasslands.
+                            </p>
+                            <p class="place-location">
+                                Location:
+                                <img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
+                                <a href="https://www.google.com/maps/place/Ranipuram/@12.4192797,75.3334477,14z/data=!3m1!4b1!4m5!3m4!1s0x3ba37d0b4edae5fb:0xa2578fd53d53e34b!8m2!3d12.4192805!4d75.3509573!5m1!1e4" onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
+                                    aria-label="Piramadam-Vettimood Road - External site that opens in a new window" title="Piramadam-Vettimood Road - External site that opens in a new window" target="_blank">Ranipuram, Kerala</a
                   >
                 </p>
               </div>
@@ -182,49 +144,28 @@
                     target="_blank"
                     >Kasargod
                   </a>
-                </p>
-              </div>
-            </div>
+                            </p>
+                        </div>
+                    </div>
 
-            <div class="col-3">
-              <div class="text-center">
-                <h2 class="">
-                  Ananthapura Lake temple
-                </h2>
-                <figure>
-                  <img
-                    class="dist-place"
-                    src="./assets/images/Ditricts/KSR/Ananthapura Lake temple.jpg"
-                    alt=""
-                  />
-                </figure>
-              </div>
-              <div class="wpb_wrapper">
-                <p class="text-justify">
-                  The temple is situated in Kasargod district of Kerala and is
-                  connected to Sri Anantha Padmanabha Temple ,Trivandrum. It's a
-                  lovely temple surrounded by a lake. It is heard by the local
-                  people that there is a crocodile in this lake which protects
-                  the temple.
-                </p>
-                <p class="place-location">
-                  Location:
-                  <img
-                    loading="lazy"
-                    class="alignnone  wp-image-25056"
-                    src="./assets/images/loc.png"
-                    alt="map"
-                    width="21"
-                    height="21"
-                    sizes="(max-width: 21px) 100vw, 21px"
-                  />
-                  <a
-                    href="https://www.google.com/maps/place/SRI+ANANTHAPADMANABHA+SWAMY+TEMPLE/@12.5842181,74.9820138,15z/data=!4m2!3m1!1s0x0:0x210b8a5e8ad802d6?sa=X&ved=2ahUKEwjv6eKugKL1AhWKSmwGHQ6BCeAQ_BJ6BAg-EAU"
-                    onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
-                    aria-label="Kothamangalam - External site that opens in a new window"
-                    title="Kothamangalam - External site that opens in a new window"
-                    target="_blank"
-                    >P. O, Ananthapura</a
+                    <div class="col-3">
+                        <div class="text-center">
+                            <h2 class="">
+                                Ananthapura Lake temple
+                            </h2>
+                            <figure>
+                                <img class="dist-place" src="./assets/images/Ditricts/KSR/Ananthapura Lake temple.jpg" alt="" />
+                            </figure>
+                        </div>
+                        <div class="wpb_wrapper">
+                            <p class="text-justify">
+                                The temple is situated in Kasargod district of Kerala and is connected to Sri Anantha Padmanabha Temple ,Trivandrum. It's a lovely temple surrounded by a lake. It is heard by the local people that there is a crocodile in this lake which protects the temple.
+                            </p>
+                            <p class="place-location">
+                                Location:
+                                <img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
+                                <a href="https://www.google.com/maps/place/SRI+ANANTHAPADMANABHA+SWAMY+TEMPLE/@12.5842181,74.9820138,15z/data=!4m2!3m1!1s0x0:0x210b8a5e8ad802d6?sa=X&ved=2ahUKEwjv6eKugKL1AhWKSmwGHQ6BCeAQ_BJ6BAg-EAU" onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
+                                    aria-label="Kothamangalam - External site that opens in a new window" title="Kothamangalam - External site that opens in a new window" target="_blank">P. O, Ananthapura</a
                   >
                 </p>
               </div>
@@ -469,48 +410,40 @@
             Thiruvananthapuram, Kerala, India - 695 033<br />Phone: +91 471
             2321132, Fax: +91 471 2322279, E-mail:
             <a href="mailto:info@keralatourism.org">info@keralatourism.org</a>.
-            <br />All rights reserved © Kerala Tourism 2022.
-            <a href="" title="Copyright">Copyright</a> |
-            <a href="" title="Terms of Use">Terms of Use</a> |
-            <a href="" title="Cookie Policy">Cookie Policy</a> |
-            <a href="" title="Contact Us">Contact Us</a>. <br />Developed &amp;
-            Maintained by Invis Multimedia.
-          </div>
-        </div>
-      </div>
-      <div></div>
-    </footer>
+                                <br />All rights reserved © Kerala Tourism 2022.
+                                <a href="" title="Copyright">Copyright</a> |
+                                <a href="" title="Terms of Use">Terms of Use</a> |
+                                <a href="" title="Cookie Policy">Cookie Policy</a> |
+                                <a href="" title="Contact Us">Contact Us</a>. <br />Developed &amp; Maintained by Invis Multimedia.
+                        </div>
+                    </div>
+                </div>
+                <div></div>
+                </footer>
 
-    <!-- Optional JavaScript -->
+                <!-- Optional JavaScript -->
 
-    <script>
-      // When the user scrolls down 50px from the top of the document, resize the header's font size
-      window.onscroll = function () {
-        scrollFunction()
-      }
+                <script>
+                    // When the user scrolls down 50px from the top of the document, resize the header's font size
+                    window.onscroll = function() {
+                        scrollFunction()
+                    }
 
-      function scrollFunction () {
-        if (
-          document.body.scrollTop > 50 ||
-          document.documentElement.scrollTop > 50
-        ) {
-          document.getElementById('header').classList.add('head-scroll')
-        } else {
-          document.getElementById('header').classList.remove('head-scroll')
-        }
-      }
-    </script>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-      crossorigin="anonymous"
-    ></script>
-    <!-- <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script> -->
-  </body>
+                    function scrollFunction() {
+                        if (
+                            document.body.scrollTop > 50 ||
+                            document.documentElement.scrollTop > 50
+                        ) {
+                            document.getElementById('header').classList.add('head-scroll')
+                        } else {
+                            document.getElementById('header').classList.remove('head-scroll')
+                        }
+                    }
+                </script>
+                <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+                <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+                <!-- <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script> -->
+</body>
+
 </html>
