--- a/KZK.html
+++ b/KZK.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,127 +15,91 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
 
     <title>Tour India</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- Header  -->
     <header class="container-fluid" id="header">
-      <div class="row">
-        <div class="col-1 logo">
-          <!-- <a href="" class="logo-click"></a> -->
-          <img src="./assets/images/logo2.jpg" class="" alt="" />
-        </div>
-        <div class="col nav">
-          <a href="#">Home</a>
-          <a href="#">District</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
-          <a href="#">Home</a>
-        </div>
-        <div class="col-3 user">
-          <div class="search-box">
-            <div>
-              <img src="./assets/images/search.png" alt="" />
+        <div class="row">
+            <div class="col-1 logo">
+                <!-- <a href="" class="logo-click"></a> -->
+                <img src="./assets/images/logo2.jpg" class="" alt="" />
             </div>
-            <div><input class="search-key" type="text" /></div>
-          </div>
+            <div class="col nav">
+                <a href="./index.html">Home</a>
+                <a class="active" href="./district.html">District</a>
+                <a href="./login.html">Login</a>
+                <a href="./signup.html">Signup</a>
+            </div>
+            <div class="col-3 user">
+                <div class="search-box">
+                    <div>
+                        <img src="./assets/images/search.png" alt="" />
+                    </div>
+                    <div><input class="search-key" type="text" /></div>
+                </div>
+            </div>
         </div>
-      </div>
     </header>
 
     <!-- content -->
     <section class="container-fluid dist-intro">
-      <article class="row">
-        <div class="col dist-img">
-          <h1 class="glow">KOZHIKODE</h1>
-          <img src="./assets/images/Ditricts/kzk.jpg" alt="" />
-        </div>
-      </article>
+        <article class="row">
+            <div class="col dist-img">
+                <h1 class="glow">KOZHIKODE</h1>
+                <img src="./assets/images/Ditricts/kzk.jpg" alt="" />
+            </div>
+        </article>
     </section>
 
     <section class="container">
-      <article class="row mb-5">
-        <div class="col-6">
-          <div class="image-container">
-            <a href="https://kozhikode.nic.in/">
-              <img
-                src="./assets/images/Ditricts/map/kzk-map.png"
-                class="w-100"
-                alt=""
-              />
-            </a>
-          </div>
-        </div>
-        <div class="col-6">
-          <div class="mt-5">
-            <h3>ABOUT DISTRICT&nbsp;</h3>
-            <p>
-              <strong>Kozhikode: Land of Taste and love</strong>
-            </p>
-            <p
-              class="text-justify"
-              id="tw-target-text"
-              dir="ltr"
-              data-placeholder="Translation"
-            >
-              Kozhikode, also known in English as Calicut, is an Indian city and
-              the second-largest metropolitan city in the State of Kerala. It is
-              also the 19th largest in the country with a population of two
-              million according to the 2011 census.[8] Kozhikode is classified
-              as a Tier 2 city by the Government of India.[9] It is the largest
-              city in the region known as Malabar and was the capital of the
-              British-era Malabar district. In antiquity and the medieval
-              period, Kozhikode was dubbed the City of Spices for its role as
-              the major trading point for Indian spices.
-            </p>
-          </div>
-        </div>
-      </article>
+        <article class="row mb-5">
+            <div class="col-6">
+                <div class="image-container">
+                    <a href="https://kozhikode.nic.in/">
+                        <img src="./assets/images/Ditricts/map/kzk-map.png" class="w-100" alt="" />
+                    </a>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="mt-5">
+                    <h3>ABOUT DISTRICT&nbsp;</h3>
+                    <p>
+                        <strong>Kozhikode: Land of Taste and love</strong>
+                    </p>
+                    <p class="text-justify" id="tw-target-text" dir="ltr" data-placeholder="Translation">
+                        Kozhikode, also known in English as Calicut, is an Indian city and the second-largest metropolitan city in the State of Kerala. It is also the 19th largest in the country with a population of two million according to the 2011 census.[8] Kozhikode is classified
+                        as a Tier 2 city by the Government of India.[9] It is the largest city in the region known as Malabar and was the capital of the British-era Malabar district. In antiquity and the medieval period, Kozhikode was dubbed the City
+                        of Spices for its role as the major trading point for Indian spices.
+                    </p>
+                </div>
+            </div>
+        </article>
 
-      <article class="row places">
-        <div class="col-12 mb-4 animated">
-          <p class="h2">Places Of interest</p>
+        <article class="row places">
+            <div class="col-12 mb-4 animated">
+                <p class="h2">Places Of interest</p>
 
-          <!-- first -->
-          <div class="row places-row mb-3">
-            <div class="col-3">
-              <div class="text-center">
-                <h2 class="">
-                  Backwaters in Kozhikode
-                </h2>
-                <figure>
-                  <img
-                    class="dist-place"
-                    src="./assets/images/Ditricts/KZK/Backwaters in Kozhikode.jpg"
-                    alt=""
-                  />
-                </figure>
-              </div>
-              <div class="wpb_wrapper">
-                <p class="text-justify">
-                  Spread across long stretches of the Arabian water, these
-                  beguiling backwater lagoons are a sight to withhold. However,
-                  they are well known for its cruises on houseboats which offer
-                  an enthralling experience.
-                </p>
-                <p class="place-location">
-                  Location:
-                  <img
-                    loading="lazy"
-                    class="alignnone  wp-image-25056"
-                    src="./assets/images/loc.png"
-                    alt="map"
-                    width="21"
-                    height="21"
-                    sizes="(max-width: 21px) 100vw, 21px"
-                  />
-                  <a
-                    href="https://www.google.com/maps/search/Backwaters+in+Kozhikode/@11.0151445,75.2812695,9z/data=!3m1!4b1"
-                    onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
-                    aria-label="Piramadam-Vettimood Road - External site that opens in a new window"
-                    title="Piramadam-Vettimood Road - External site that opens in a new window"
-                    target="_blank"
-                    >kozhikode ,kerala</a
+                <!-- first -->
+                <div class="row places-row mb-3">
+                    <div class="col-3">
+                        <div class="text-center">
+                            <h2 class="">
+                                Backwaters in Kozhikode
+                            </h2>
+                            <figure>
+                                <img class="dist-place" src="./assets/images/Ditricts/KZK/Backwaters in Kozhikode.jpg" alt="" />
+                            </figure>
+                        </div>
+                        <div class="wpb_wrapper">
+                            <p class="text-justify">
+                                Spread across long stretches of the Arabian water, these beguiling backwater lagoons are a sight to withhold. However, they are well known for its cruises on houseboats which offer an enthralling experience.
+                            </p>
+                            <p class="place-location">
+                                Location:
+                                <img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
+                                <a href="https://www.google.com/maps/search/Backwaters+in+Kozhikode/@11.0151445,75.2812695,9z/data=!3m1!4b1" onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
+                                    aria-label="Piramadam-Vettimood Road - External site that opens in a new window" title="Piramadam-Vettimood Road - External site that opens in a new window" target="_blank">kozhikode ,kerala</a
                   >
                 </p>
               </div>
@@ -180,48 +145,28 @@
                     target="_blank"
                     >Kakkadampoyil, Kerala
                   </a>
-                </p>
-              </div>
-            </div>
+                            </p>
+                        </div>
+                    </div>
 
-            <div class="col-3">
-              <div class="text-center">
-                <h2 class="">
-                  Thusharagiri Waterfall
-                </h2>
-                <figure>
-                  <img
-                    class="dist-place"
-                    src="./assets/images/Ditricts/KZK/Thusharagiri Waterfall.jpg"
-                    alt=""
-                  />
-                </figure>
-              </div>
-              <div class="wpb_wrapper">
-                <p class="text-justify">
-                  Lying in the Western Ghats of Kozhikode district in Kerala,
-                  Thusharagiri Fall cascades down as three waterfalls. Located
-                  in a small tribal village, the name of the falls means ???snow
-                  covered mountains'.
-                </p>
-                <p class="place-location">
-                  Location:
-                  <img
-                    loading="lazy"
-                    class="alignnone  wp-image-25056"
-                    src="./assets/images/loc.png"
-                    alt="map"
-                    width="21"
-                    height="21"
-                    sizes="(max-width: 21px) 100vw, 21px"
-                  />
-                  <a
-                    href="https://www.google.com/maps/place/Thusharagiri+Waterfalls/@11.4730609,76.0518696,17z/data=!3m1!4b1!4m5!3m4!1s0x3ba66c90fe6e5007:0xa6471f1078aed465!8m2!3d11.4728749!4d76.0541761"
-                    onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
-                    aria-label="Kothamangalam - External site that opens in a new window"
-                    title="Kothamangalam - External site that opens in a new window"
-                    target="_blank"
-                    >Thusharagiri</a
+                    <div class="col-3">
+                        <div class="text-center">
+                            <h2 class="">
+                                Thusharagiri Waterfall
+                            </h2>
+                            <figure>
+                                <img class="dist-place" src="./assets/images/Ditricts/KZK/Thusharagiri Waterfall.jpg" alt="" />
+                            </figure>
+                        </div>
+                        <div class="wpb_wrapper">
+                            <p class="text-justify">
+                                Lying in the Western Ghats of Kozhikode district in Kerala, Thusharagiri Fall cascades down as three waterfalls. Located in a small tribal village, the name of the falls means ???snow covered mountains'.
+                            </p>
+                            <p class="place-location">
+                                Location:
+                                <img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
+                                <a href="https://www.google.com/maps/place/Thusharagiri+Waterfalls/@11.4730609,76.0518696,17z/data=!3m1!4b1!4m5!3m4!1s0x3ba66c90fe6e5007:0xa6471f1078aed465!8m2!3d11.4728749!4d76.0541761" onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
+                                    aria-label="Kothamangalam - External site that opens in a new window" title="Kothamangalam - External site that opens in a new window" target="_blank">Thusharagiri</a
                   >
                 </p>
               </div>
@@ -466,48 +411,40 @@
             Thiruvananthapuram, Kerala, India - 695 033<br />Phone: +91 471
             2321132, Fax: +91 471 2322279, E-mail:
             <a href="mailto:info@keralatourism.org">info@keralatourism.org</a>.
-            <br />All rights reserved © Kerala Tourism 2022.
-            <a href="" title="Copyright">Copyright</a> |
-            <a href="" title="Terms of Use">Terms of Use</a> |
-            <a href="" title="Cookie Policy">Cookie Policy</a> |
-            <a href="" title="Contact Us">Contact Us</a>. <br />Developed &amp;
-            Maintained by Invis Multimedia.
-          </div>
-        </div>
-      </div>
-      <div></div>
-    </footer>
+                                <br />All rights reserved © Kerala Tourism 2022.
+                                <a href="" title="Copyright">Copyright</a> |
+                                <a href="" title="Terms of Use">Terms of Use</a> |
+                                <a href="" title="Cookie Policy">Cookie Policy</a> |
+                                <a href="" title="Contact Us">Contact Us</a>. <br />Developed &amp; Maintained by Invis Multimedia.
+                        </div>
+                    </div>
+                </div>
+                <div></div>
+                </footer>
 
-    <!-- Optional JavaScript -->
+                <!-- Optional JavaScript -->
 
-    <script>
-      // When the user scrolls down 50px from the top of the document, resize the header's font size
-      window.onscroll = function () {
-        scrollFunction()
-      }
+                <script>
+                    // When the user scrolls down 50px from the top of the document, resize the header's font size
+                    window.onscroll = function() {
+                        scrollFunction()
+                    }
 
-      function scrollFunction () {
-        if (
-          document.body.scrollTop > 50 ||
-          document.documentElement.scrollTop > 50
-        ) {
-          document.getElementById('header').classList.add('head-scroll')
-        } else {
-          document.getElementById('header').classList.remove('head-scroll')
-        }
-      }
-    </script>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-      crossorigin="anonymous"
-    ></script>
-    <!-- <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script> -->
-  </body>
+                    function scrollFunction() {
+                        if (
+                            document.body.scrollTop > 50 ||
+                            document.documentElement.scrollTop > 50
+                        ) {
+                            document.getElementById('header').classList.add('head-scroll')
+                        } else {
+                            document.getElementById('header').classList.remove('head-scroll')
+                        }
+                    }
+                </script>
+                <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+                <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+                <!-- <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script> -->
+</body>
+
 </html>
