--- a/TV.html
+++ b/TV.html
@@ -26,11 +26,10 @@
                 <img src="./assets/images/logo2.jpg" class="" alt="" />
             </div>
             <div class="col nav">
-                <a href="#">Home</a>
-                <a href="#">District</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
-                <a href="#">Home</a>
+                <a href="./index.html">Home</a>
+                <a class="active" href="./district.html">District</a>
+                <a href="./login.html">Login</a>
+                <a href="./signup.html">Signup</a>
             </div>
             <div class="col-3 user">
                 <div class="search-box">
