--- a/alp.html
+++ b/alp.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,63 +15,57 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
 
     <title>Tour India</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- Header  -->
     <header class="container-fluid" id="header">
-      <div class="row">
-        <div class="col-1 logo">
-          <!-- <a href="" class="logo-click"></a> -->
-          <img src="./assets/images/logo2.jpg" class="" alt="" />
-        </div>
-        <div class="col nav">
-          <a href="#">Home</a>
-          <a href="#">District</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
-          <a href="#">Home</a>
-        </div>
-        <div class="col-3 user">
-          <div class="search-box">
-            <div>
-              <img src="./assets/images/search.png" alt="" />
+        <div class="row">
+            <div class="col-1 logo">
+                <!-- <a href="" class="logo-click"></a> -->
+                <img src="./assets/images/logo2.jpg" class="" alt="" />
             </div>
-            <div><input class="search-key" type="text" /></div>
-          </div>
+            <div class="col nav">
+                <a href="./index.html">Home</a>
+                <a class="active" href="./district.html">District</a>
+                <a href="./login.html">Login</a>
+                <a href="./signup.html">Signup</a>
+            </div>
+            <div class="col-3 user">
+                <div class="search-box">
+                    <div>
+                        <img src="./assets/images/search.png" alt="" />
+                    </div>
+                    <div><input class="search-key" type="text" /></div>
+                </div>
+            </div>
         </div>
-      </div>
     </header>
 
     <!-- content -->
     <section class="container-fluid dist-intro">
-      <article class="row">
-        <div class="col dist-img">
-          <h1 class="glow">Alapuzha</h1>
-          <img src="./assets/images/Ditricts/Alappuzha.jpg" alt="" />
-        </div>
-      </article>
+        <article class="row">
+            <div class="col dist-img">
+                <h1 class="glow">Alapuzha</h1>
+                <img src="./assets/images/Ditricts/Alappuzha.jpg" alt="" />
+            </div>
+        </article>
     </section>
 
     <section class="container">
-      <article class="row mb-5">
-        <div class="col-6">
-          <div class="image-container">
-            <a href="https://alappuzha.nic.in/en/map-of-district/">
-              <img
-                src="./assets/images/Ditricts/map/al-map.png"
-                class="w-100"
-                alt=""
-              />
-            </a>
-          </div>
-        </div>
-        <div class="col-6">
-          <div class="mt-5">
-            <h3>ABOUT DISTRICT&nbsp;</h3>
-            <p>
-              <strong
-                >Alappuzha: An amazing paradigm of water &amp;
+        <article class="row mb-5">
+            <div class="col-6">
+                <div class="image-container">
+                    <a href="https://alappuzha.nic.in/en/map-of-district/">
+                        <img src="./assets/images/Ditricts/map/al-map.png" class="w-100" alt="" />
+                    </a>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="mt-5">
+                    <h3>ABOUT DISTRICT&nbsp;</h3>
+                    <p>
+                        <strong>Alappuzha: An amazing paradigm of water &amp;
                 conservation</strong
               >
             </p>
